# aiogram-callback-data

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
aiogram_callback_data/: __init__.py  errors.py
aiogram_callback_data/callback_data/: __init__.py  callback_data.py  filter.py  middleware.py
aiogram_callback_data/storages/: __init__.py  base.py  inmemory.py  redis.py
