[project]
name = "aiogram-callback-data"
version = "1.0.0"
description = "aiogram 3 extension that lifts Telegram's 64-byte callback_data limit by storing payloads in an external storage keyed by a short hash."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "kash1dd" },
]
maintainers = [
    { name = "kash1dd" },
]
keywords = [
    "aiogram",
    "telegram",
    "telegram-bot",
    "callback-data",
    "pydantic",
    "redis",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "aiogram>=3.0.0",
]

[project.optional-dependencies]
redis = [
    "redis[hiredis]>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/kash1dd/aiogram-callback-data"
Repository = "https://github.com/kash1dd/aiogram-callback-data"
Issues = "https://github.com/kash1dd/aiogram-callback-data/issues"
Changelog = "https://github.com/kash1dd/aiogram-callback-data/releases"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aiogram_callback_data"]

[tool.hatch.build.targets.sdist]
include = [
    "aiogram_callback_data",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
    "mypy>=1.20.1",
    "ruff>=0.15.10",
]

[tool.basedpyright]
include = ["aiogram_callback_data"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
enableTypeIgnoreComments = true

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.ruff]
line-length = 99
src = ["aiogram_callback_data", "tests"]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "docs",
    ".pytest_cache",
]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
indent-style = "space"

[tool.ruff.lint]
select = [
    "I",
    "N",
    "C4",
    "E",
    "F",
    "T20",
    "RET",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
required-imports = ["from __future__ import annotations"]
force-to-top = ["typing", "dataclasses"]
length-sort = true
lines-between-types = 0
lines-after-imports = 2
split-on-trailing-comma = true
combine-as-imports = true
